Media card, alignment fix & notice for Kyler
Added in media card part
Fixed alignment issue.
Added not for Kyler to examples

--- a/examples/examples.css
+++ b/examples/examples.css
@@ -15,6 +15,9 @@ body {
   padding: 25px 40px;
   border-bottom: 1px solid #ddd;
 }
+.section.grey {
+  background: #efefef;
+}
 
 #mainContainer {
 	/*max-width: 1100px;*/
